--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body class="container mx-auto">
    <main class="min-h-screen bg-[#1E1E1E] bg-[url('./images/background.png')] bg-no-repeat bg-center">
     <section id="home" class="">
-       <div class="text-white flex flex-col  gap-5 items-center min-h-screen justify-center  border border-red-800 ">
+       <div class="text-white flex flex-col  gap-5 items-center min-h-screen justify-center  borde ">
         <h1 class="text-9xl text-white font-extrabold"> ALPHABET CLASH</h1>
             <p>Unleash Your Keyboard Kung Fu : Press “Enter” to Play </p>
             <button class="btn bg-green-500 border-none hover:to-green-100 hover:text-black">ALPHABET CLASH</button>
@@ -33,44 +33,44 @@
                         <p class="font-bold text-white bg-slate-950 p-5 w-fit rounded-b-lg">don't look at the keybord when playing</p>
                     </div>
                     <div class="flex justify-center items-center ">
-                        <p class="text-9xl text-black font-bold border h-full uppercase">y</p>
+                        <p id="current-alphabet" class="text-9xl text-black font-bold border h-full uppercase">y</p>
                     </div>
                 </div>
             </div>
             <!-- keybord start -->
             <div>
                 <div class="flex justify-center gap-1 my-1 w-full">
-                    <kbd class="kbd">q</kbd>
-                    <kbd class="kbd">w</kbd>
-                    <kbd class="kbd">e</kbd>
-                    <kbd class="kbd">r</kbd>
-                    <kbd class="kbd">t</kbd>
-                    <kbd class="kbd">y</kbd>
-                    <kbd class="kbd">u</kbd>
-                    <kbd class="kbd">i</kbd>
-                    <kbd class="kbd">o</kbd>
-                    <kbd class="kbd">p</kbd>
+                    <kbd id="q" class="kbd">q</kbd>
+                    <kbd id="w" class="kbd">w</kbd>
+                    <kbd id="e" class="kbd">e</kbd>
+                    <kbd id="r" class="kbd">r</kbd>
+                    <kbd id="t" class="kbd">t</kbd>
+                    <kbd id="y" class="kbd">y</kbd>
+                    <kbd id="u" class="kbd">u</kbd>
+                    <kbd id="i" class="kbd">i</kbd>
+                    <kbd id="o" class="kbd">o</kbd>
+                    <kbd id="p" class="kbd">p</kbd>
                   </div> 
                   <div class="flex justify-center gap-1 my-1 w-full">
-                    <kbd class="kbd">a</kbd>
-                    <kbd class="kbd">s</kbd>
-                    <kbd class="kbd">d</kbd>
-                    <kbd class="kbd">f</kbd>
-                    <kbd class="kbd">g</kbd>
-                    <kbd class="kbd">h</kbd>
-                    <kbd class="kbd">j</kbd>
-                    <kbd class="kbd">k</kbd>
-                    <kbd class="kbd">l</kbd>
+                    <kbd id="a" class="kbd">a</kbd>
+                    <kbd id="s" class="kbd">s</kbd>
+                    <kbd id="d" class="kbd">d</kbd>
+                    <kbd id="f" class="kbd">f</kbd>
+                    <kbd id="g" class="kbd">g</kbd>
+                    <kbd id="h" class="kbd">h</kbd>
+                    <kbd id="j" class="kbd">j</kbd>
+                    <kbd id="k" class="kbd">k</kbd>
+                    <kbd id="l" class="kbd">l</kbd>
                   </div> 
                   <div class="flex justify-center gap-1 my-1 w-full">
-                    <kbd class="kbd">z</kbd>
-                    <kbd class="kbd">x</kbd>
-                    <kbd class="kbd">c</kbd>
-                    <kbd class="kbd">v</kbd>
-                    <kbd class="kbd">b</kbd>
-                    <kbd class="kbd">n</kbd>
-                    <kbd class="kbd">m</kbd>
-                    <kbd class="kbd">/</kbd>
+                    <kbd id="z" class="kbd">z</kbd>
+                    <kbd id="x" class="kbd">x</kbd>
+                    <kbd id="c" class="kbd">c</kbd>
+                    <kbd id="v" class="kbd">v</kbd>
+                    <kbd id="b" class="kbd">b</kbd>
+                    <kbd id="n" class="kbd">n</kbd>
+                    <kbd id="m" class="kbd">m</kbd>
+                    <kbd id="/" class="kbd">/</kbd>
                   </div>
             </div>
             <!-- keybord end -->
@@ -104,6 +104,7 @@
     </section>
    </main>
     <script src="./js/script.js"></script>
+    <script src="./js/utility.js"></script>
 </body>
 
 </html>
