play button click is fixed and its error fixed

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
        <div class="text-white flex flex-col  gap-5 items-center min-h-screen justify-center  borde ">
         <h1 class="text-9xl text-white font-extrabold"> ALPHABET CLASH</h1>
             <p>Unleash Your Keyboard Kung Fu : Press “Enter” to Play </p>
-            <button class="btn bg-green-500 border-none hover:to-green-100 hover:text-black">ALPHABET CLASH</button>
+            <button id="play" class="btn bg-green-500 border-none hover:to-green-100 hover:text-black">Play</button>
        </div>
 
     </section>
